# FinAgents

./: .env.example  .gitignore  BUILD_INFO  LICENSE  README.md  debug_services.ps1  pyproject.toml  requirements.txt  start_backend_only.ps1  start_services_clean.ps1
.claude/: settings.local.json
Single/: .env.development  README.md  index.html  package-lock.json  package.json  run_backend.py  start.ps1  test_analysis.py  test_analysis_direct.py  test_prepare_async.py  vite.config.js
app/: __main__.py  main.py
config/: agent_base_classes_example.yaml  data_consistency_config.json  data_schema.yaml  dynamic.json  model_recommendations.json  models.example.json  post_processors_example.yaml  pricing.json  verified_models.json  workflow_with_post_processing_example.yaml
core/: LICENSE  __init__.py
docs/: CHROMADB_ALTERNATIVES.md  CURRENT_REVIEW_WORKFLOW.md  CURSOR_RULES.md  DEBUG_LOGGING_GUIDE.md  FIX_HK_STOCK_NAME_ISSUE.md  FIX_POSITION_ANALYSIS_WORKFLOW.md  HYBRID_AUTH.md  IMPLEMENTATION_SUMMARY.md  INITIALIZATION_LOGIC.md  PAPER_TRADING_IMPLEMENTATION_SUMMARY.md  PAPER_TRADING_NAME_FIELD_IMPLEMENTATION.md  PAPER_TRADING_OPTIMIZATION.md  POSITION_ANALYSIS_IMPROVEMENT_SUMMARY.md  POSITION_ANALYSIS_OPTIMIZATION.md  POSITION_ANALYSIS_TEMPLATE_FIX.md  POSITION_ANALYSIS_TEMPLATE_FIX_PLAN.md  POSTGRES_MIGRATION.md  PROJECT_PROGRESS.md  PROMPT_TEMPLATE_SYSTEM_USAGE.md  QDRANT_MIGRATION_SUMMARY.md  TROUBLESHOOTING_AUTH.md  USER_PROMPT_TEMPLATE_MIGRATION_GUIDE.md  email-to-tradingagents-team.txt
examples/: agent_base_classes_example.py  custom_tool_example.py  demo_deepseek_analysis.py  enhanced_history_demo.py  langgraph_state_example.py  post_processing_example.py  state_generation_example.py  test_custom_tool_fix.py  test_v2_memory_integration.py  test_v2_workflow.py  v2_memory_embedding_demo.py  workflow_dynamic_example.py
install/: README_PRO.md  database_export_config_2026-01-28.json  database_export_config_2026-02-03.json  database_export_config_2026-2-3.json
scripts/: import_config_and_create_user.py  import_mongodb_config.py  import_prompt_templates_postgres.py  init_mongodb.ps1  init_mongodb_user.py  init_postgres.py  setup_llm.py  start_redis.ps1  test_batch_import_apis.py  troubleshoot_worker.ps1
tests/: test_agent_base_classes.py  test_cookie_auth.html  test_hk_stock_name.py  test_hybrid_auth.py  test_mongodb_fix.py  test_mongodb_utils.py  test_new_paper_position.py  test_node_mapping_fix.py  test_paper_positions_name.py  test_paper_trading_name_field.py  test_post_processors.py  test_progress_time_fix.py  test_proxy_configuration.py  test_scheduled_analysis_test_endpoint.py  test_session_management.py  test_v2_memory_sync.py  (+5 more)
(+536 files in other folders)
